log
Fri 08 Sep 2023 02:11:10 PM UTC: 
 tests:  0|6
total_score: 0/70
13c5c85
Fri 08 Sep 2023 02:25:44 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
cbb0df9
Fri 08 Sep 2023 02:26:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cc21dac
Fri 08 Sep 2023 02:31:36 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:39: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
   49 |   map->buckets[position] = createPair(_strdup(key), value);
      |                                       ^~~~~~~
      |                                       strdup
hashmap.c:49:39: error: passing argument 1 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |   map->buckets[position] = createPair(_strdup(key), value);
      |                                       ^~~~~~~~~~~~
      |                                       |
      |                                       int
hashmap.c:19:27: note: expected ‘char *’ but argument is of type ‘int’
   19 | Pair * createPair( char * key,  void * value) {
      |                    ~~~~~~~^~~
test.c: At top level:
test.c:8:8: error: conflicting types for ‘_strdup’; have ‘char *(const char *)’
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
hashmap.c:49:39: note: previous implicit declaration of ‘_strdup’ with type ‘int()’
   49 |   map->buckets[position] = createPair(_strdup(key), value);
      |                                       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d8ceeaf
Fri 08 Sep 2023 02:33:23 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:14: error: expected ‘;’ before ‘map’
   50 |   map->size++
      |              ^
      |              ;
   51 |   map->current = position;
      |   ~~~         
Compilation failed
428e329
Fri 08 Sep 2023 02:33:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:13: error: expected expression before ‘;’ token
   50 |   map->size+;
      |             ^
Compilation failed
0948f58
Fri 08 Sep 2023 02:33:42 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
c404b25
Fri 08 Sep 2023 02:41:28 PM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
1e4cdc6
Fri 08 Sep 2023 02:46:23 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:75:35: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘capaciti’; did you mean ‘capacity’?
   75 |   long positions = hash(key, map->capaciti);
      |                                   ^~~~~~~~
      |                                   capacity
hashmap.c:76:23: error: ‘position’ undeclared (first use in this function); did you mean ‘positions’?
   76 |   while (map->buckets[position] != NULL) {
      |                       ^~~~~~~~
      |                       positions
hashmap.c:76:23: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:79:18: error: expected ‘;’ before ‘return’
   79 |       map->size--
      |                  ^
      |                  ;
   80 |       return;
      |       ~~~~~~      
hashmap.c:75:8: error: unused variable ‘positions’ [-Werror=unused-variable]
   75 |   long positions = hash(key, map->capaciti);
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0f7d589
Fri 08 Sep 2023 02:46:48 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
ccca324
Fri 08 Sep 2023 02:48:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
8913e70
Fri 08 Sep 2023 02:57:10 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:106:42: error: expected ‘;’ before ‘}’ token
  106 |         return map->buckets[map->current]
      |                                          ^
      |                                          ;
  107 |     } else {
      |     ~                                     
Compilation failed
935b0f7
Fri 08 Sep 2023 02:57:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
70c83ad
Fri 08 Sep 2023 03:06:41 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  12|2
total_score: 50/70
a807694
Fri 08 Sep 2023 03:08:49 PM UTC: 
 hashmap.c | 14 ++------------
 1 file changed, 2 insertions(+), 12 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
  114 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
abc0ee4
Fri 08 Sep 2023 03:09:23 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c:112:8: error: redefinition of ‘nextMap’
  112 | Pair * nextMap(HashMap * map) {
      |        ^~~~~~~
hashmap.c:98:8: note: previous definition of ‘nextMap’ with type ‘Pair *(HashMap *)’ {aka ‘Pair *(struct HashMap *)’}
   98 | Pair * nextMap(HashMap * map) {
      |        ^~~~~~~
hashmap.c: In function ‘nextMap’:
hashmap.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
  114 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c287172
Fri 08 Sep 2023 03:10:21 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
95f5a49
Fri 08 Sep 2023 03:12:26 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  16|1
total_score: 60/70
300c2e0
Fri 08 Sep 2023 03:30:29 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:66:20: error: expected ‘;’ before ‘}’ token
   66 |   free(old_buckets)
      |                    ^
      |                    ;
   67 | }
      | ~                   
Compilation failed
a0c2a18
Fri 08 Sep 2023 03:31:04 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  17|0
total_score: 70/70
f2e894e
